--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "dependencies": {
     "@styled-icons/material-outlined": "^10.34.0",
+    "graphql": "^15.5.1",
+    "graphql-request": "^3.4.0",
     "next": "^11.0.0",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
