--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "export": "next export",
     "start": "next start",
     "storybook": "start-storybook -p 6006 -s ./public",
-    "build-storybook": "build-storybook",
+    "build-storybook": "build-storybook -s ./public",
     "test": "jest",
     "deploy-static": "npm run build && npm run export",
     "lint": "eslint src --max-warnings=0",
@@ -26,7 +26,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
-    "@storybook/addon-actions": "^6.2.9",
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
     "@storybook/react": "^6.2.9",
